<resources>
    <string name="app_name">lesson4.7</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phote_number_hint">Введите номер</string>
    <string name ="code_number_hint">Введите код</string>
    <string name="get_code">Получить код</string>
    <string name="resend_code">Отправить снова</string>
    <string name="registration_title">Регистрация</string>
    <string name="fill_field_error">Заполните поле</string>
    <string name="name">Заметки</string>
    <string name="search">Поиск заметок</string>
    <string name="n2d">Нужно сделать:</string>
    <string name="work">Работы с проектом, сделать домашку, убираться и…</string>
    <string name="datetime">6 июня \\n 12:45</string>
    <string name="datetime2">05.05.21 \n 12:45</string>
</resources>