<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/gray"
        app:cardCornerRadius="18dp">
        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:text="@string/n2d"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/white"
            android:layout_marginStart="20dp"
            android:text="@string/work"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8sp"
            android:text="@string/datetime"
            android:layout_marginStart="290dp"
            android:layout_marginTop="20dp"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:backgroundTint="@color/orange_background"
        app:cardCornerRadius="18dp">
        <TextView
            android:id="@+id/itemName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange_text"
            android:layout_marginStart="20dp"
            android:text="@string/n2d"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/itemDescription2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/orange_text"
            android:layout_marginStart="20dp"
            android:text="@string/work"
            android:layout_marginTop="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8sp"
            android:text="@string/datetime2"
            android:layout_marginStart="288dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/orange_text"/>
    </androidx.cardview.widget.CardView>

</LinearLayout>