<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment"
    android:id="@+id/container"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_title"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:layout_marginBottom="50dp"
        android:id="@+id/tv_title"/>

    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/baseline_add_call_24"
        android:id="@+id/til_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/phote_number_hint"
        app:placeholderText="@string/phote_number_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        app:startIconDrawable="@drawable/code"
        android:id="@+id/til_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/code_number_hint"
        app:placeholderText="@string/code_number_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:id="@+id/btn_send_code"
        android:text="@string/get_code"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_resend_code"
        android:layout_marginTop="10dp"
        android:text="@string/resend_code"/>
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_view"
        android:name="com.example.lesson47.RegisterFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:defaultNavHost="true"
        app:navGraph="@navigation/nav_graph"
        />
</LinearLayout>



































